Node, Sass, etc. installation

--- a/css/chrystal.css
+++ b/css/chrystal.css
@@ -1,118 +1,101 @@
+@charset "UTF-8";
 /*
 Chrystal CSS Library
 
 by Yehuda C. Nathanael　(ナタナエル) ©2020
 started on 23rd January 2020
 */
-
-
-@import url('https://fonts.googleapis.com/css?family=Alata&display=swap');
-
+@import url("https://fonts.googleapis.com/css?family=Alata&display=swap");
 *,
 *::before,
 *::after {
-	margin:0;
-	box-sizing:inherit;
-}
+  margin: 0;
+  box-sizing: inherit; }
 
 html {
-	font-size: 62.5%;
-}
+  font-size: 62.5%; }
 
 body {
-	width:100vw;
-	font-size:1.6rem;
-	box-sizing: border-box;
-	font-family: 'Alata', sans-serif;
-}
+  font-size: 1.6rem;
+  box-sizing: border-box;
+  font-family: 'Alata', sans-serif; }
 
 div.container {
-	width:80%;
-	margin:auto;
-}
+  width: 80%;
+  margin: auto; }
 
 .header {
-	padding:8rem;
-}
+  padding: 8rem; }
 
-.btn,
-.btn:link,
-.btn:visited {
-	font-family: inherit;
-	font-size: 1.3rem;
-	text-decoration:none;
-	border-radius: .3rem;
-	padding: .5rem 1rem;
-	margin: 1rem;
-	display: inline-block;
-}
+.btn, .btn:link, .btn:visited {
+  font-family: inherit;
+  font-size: 1.3rem;
+  text-decoration: none;
+  border-radius: .3rem;
+  padding: .5rem 1rem;
+  margin: 1rem;
+  display: inline-block;
+  cursor: pointer; }
+
+.btn:focus {
+  outline: none; }
+
+.btn:active {
+  outline: none; }
 
 .btn-animated {
-	transition: all .2s;
-	box-shadow: .2rem .2rem .5rem rgba(0,0,0, .8);
-}
+  transition: all .2s;
+  box-shadow: 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.8); }
 
 .btn-bsc {
-	background-color:#FFF;
-	color:#333;
-	border: 1px solid #333;
-}
+  background-color: #FFF;
+  color: #333;
+  border: 1px solid #333; }
 
 .btn-blue {
-	background-color:blue;
-	color:#FFF;
-	border: 1px solid #333;
-}
+  background: linear-gradient(to right bottom, #3f72af, #112d4e);
+  color: #FFF;
+  border: 1px solid #333; }
 
 .btn-green {
-	background-color:green;
-	color:#FFF;
-	border: 1px solid #333;
-}
+  background-color: green;
+  color: #FFF;
+  border: 1px solid #333; }
 
 .btn-yellow {
-	background-color:yellow;
-	color:#333;
-	border: 1px solid #333;
-}
+  background-color: yellow;
+  color: #333;
+  border: 1px solid #333; }
 
 .btn-red {
-	background-color:red;
-	color:#FFF;
-	border: 1px solid #333;
-}
+  background-color: red;
+  color: #FFF;
+  border: 1px solid #333; }
 
 .btn-bsc:hover {
-	background-color: #333;
-	color: #fff;
-}
+  background-color: #333;
+  color: #fff; }
 
 .btn-blue:hover {
-	background-color: #333;
-	color: #fff;
-}
+  background-color: #333;
+  color: #fff; }
 
 .btn-green:hover {
-	background-color: #333;
-	color: #fff;
-}
+  background-color: #333;
+  color: #fff; }
 
 .btn-yellow:hover {
-	background-color: #333;
-	color: #fff;
-}
+  background-color: #333;
+  color: #fff; }
 
 .btn-red:hover {
-	background-color: #333;
-	color: #fff;
-}
+  background-color: #333;
+  color: #fff; }
 
-.btn-animated:hover{
-	transform: translateY(-.4rem);
-	box-shadow: .3rem .3rem .7rem rgba(0,0,0, .8);
-}
+.btn-animated:hover {
+  transform: translateY(-0.4rem);
+  box-shadow: 0.3rem 0.3rem 0.7rem rgba(0, 0, 0, 0.8); }
 
-.btn-animated:active{
-	transform: translateY(0);
-	box-shadow: .2rem .2rem .5rem rgba(0,0,0, .8);
-}
+.btn-animated:active {
+  transform: translateY(0);
+  box-shadow: 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.8); }
