--- a/css/chrystal.css
+++ b/css/chrystal.css
@@ -1,101 +1,221 @@
-@charset "UTF-8";
 /*
 Chrystal CSS Library
 
 by Yehuda C. Nathanael　(ナタナエル) ©2020
 started on 23rd January 2020
 */
-@import url("https://fonts.googleapis.com/css?family=Alata&display=swap");
+
+
+@import url('https://fonts.googleapis.com/css?family=Alata&display=swap');
+
 *,
 *::before,
 *::after {
-  margin: 0;
-  box-sizing: inherit; }
+	margin:0;
+	box-sizing:inherit;
+}
 
 html {
-  font-size: 62.5%; }
+	font-size: 62.5%;
+}
 
 body {
-  font-size: 1.6rem;
-  box-sizing: border-box;
-  font-family: 'Alata', sans-serif; }
+	font-size:1.6rem;
+	box-sizing: border-box;
+	font-family: 'Alata', sans-serif;
+}
 
 div.container {
-  width: 80%;
-  margin: auto; }
+	width:80%;
+	margin:auto;
+}
 
 .header {
-  padding: 8rem; }
+	padding:8rem;
+}
 
-.btn, .btn:link, .btn:visited {
-  font-family: inherit;
-  font-size: 1.3rem;
-  text-decoration: none;
-  border-radius: .3rem;
-  padding: .5rem 1rem;
-  margin: 1rem;
-  display: inline-block;
-  cursor: pointer; }
+/* HEADINGS */
+.heading-primary {
+	margin: 2.5rem 1rem;
+}
 
-.btn:focus {
-  outline: none; }
+.heading-secondary {
+	margin: 1.5rem 1rem;
+}
 
-.btn:active {
-  outline: none; }
+.heading-tertiary {
+	margin: 1.5rem 1rem;
+}
+
+/* BUTTONS */
+.btn,
+.btn:link,
+.btn:visited {
+	font-family: inherit;
+	font-size: 1.3rem;
+	text-decoration:none;
+	border-radius: .3rem;
+	padding: .5rem 1rem;
+	margin: 1rem;
+	display: inline-block;
+}
 
 .btn-animated {
-  transition: all .2s;
-  box-shadow: 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.8); }
+	transition: all .2s;
+	box-shadow: .2rem .2rem .5rem rgba(0,0,0, .8);
+}
 
 .btn-bsc {
-  background-color: #FFF;
-  color: #333;
-  border: 1px solid #333; }
+	background-color:#FFF;
+	color:#333;
+	border: 1px solid #333;
+}
 
 .btn-blue {
-  background: linear-gradient(to right bottom, #3f72af, #112d4e);
-  color: #FFF;
-  border: 1px solid #333; }
+	background-color:blue;
+	color:#FFF;
+	border: 1px solid #333;
+}
 
 .btn-green {
-  background-color: green;
-  color: #FFF;
-  border: 1px solid #333; }
+	background-color:green;
+	color:#FFF;
+	border: 1px solid #333;
+}
 
 .btn-yellow {
-  background-color: yellow;
-  color: #333;
-  border: 1px solid #333; }
+	background-color:yellow;
+	color:#333;
+	border: 1px solid #333;
+}
 
 .btn-red {
-  background-color: red;
-  color: #FFF;
-  border: 1px solid #333; }
+	background-color:red;
+	color:#FFF;
+	border: 1px solid #333;
+}
 
 .btn-bsc:hover {
-  background-color: #333;
-  color: #fff; }
+	background-color: #333;
+	color: #fff;
+}
 
 .btn-blue:hover {
-  background-color: #333;
-  color: #fff; }
+	background-color: #333;
+	color: #fff;
+}
 
 .btn-green:hover {
-  background-color: #333;
-  color: #fff; }
+	background-color: #333;
+	color: #fff;
+}
 
 .btn-yellow:hover {
-  background-color: #333;
-  color: #fff; }
+	background-color: #333;
+	color: #fff;
+}
 
 .btn-red:hover {
-  background-color: #333;
-  color: #fff; }
+	background-color: #333;
+	color: #fff;
+}
 
-.btn-animated:hover {
-  transform: translateY(-0.4rem);
-  box-shadow: 0.3rem 0.3rem 0.7rem rgba(0, 0, 0, 0.8); }
+.btn-animated:hover{
+	transform: translateY(-.4rem);
+	box-shadow: .3rem .3rem .7rem rgba(0,0,0, .8);
+}
 
-.btn-animated:active {
-  transform: translateY(0);
-  box-shadow: 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.8); }
+.btn-animated:active{
+	transform: translateY(0);
+	box-shadow: .2rem .2rem .5rem rgba(0,0,0, .8);
+}
+
+/* CARDS */
+
+.card {
+	
+}
+
+.card-full-row {
+	display:block;
+	width: 95%;
+	margin: 1rem auto;
+	border: solid rgba(0,0,0, .7) 1px;
+	border-radius: 3px;
+	padding: 2rem;
+	box-shadow: 0 0 .5rem rgba(0,0,0, .8);
+	
+}
+
+/* LOADERS */
+
+.loader-sm{
+	width: 3.5rem;
+	height: 3.5rem;
+	border: solid #f3f3f3 .5rem;
+	border-top: solid rgba(0,0,0, .7) .5rem;
+	border-radius: 50%;
+	animation: load 2s linear infinite;
+	-webkit-animation: load 2s linear infinite;
+}
+
+.loader-md {
+	width: 7rem;
+	height: 7rem;
+	border: solid #f3f3f3 1rem;
+	border-top: solid rgba(0,0,0, .7) 1rem;
+	border-radius: 50%;
+	animation: load 2s linear infinite;
+	-webkit-animation: load 2s linear infinite;
+}
+
+.loader-lg {
+	width: 10rem;
+	height: 10rem;
+	border: solid #f3f3f3 1.7rem;
+	border-top: solid rgba(0,0,0, .7) 1.7rem;
+	border-radius: 50%;
+	animation: load 2s linear infinite;
+	-webkit-animation: load 2s linear infinite;
+}
+
+/* LOADER ANIMATIONS*/
+
+@-webkit-keyframes load {
+	0% {
+		transform: rotate(0) scale(1);
+	}
+	50% {
+		transform: rotate(180deg) scale(0.95);
+	}
+	100% {
+		transform: rotate(360deg) scale(1);
+	}
+}
+
+@keyframes load {
+	0% {
+		transform: rotate(0) scale(1);
+	}
+	50% {
+		transform: rotate(180deg) scale(0.95);
+	}
+	100% {
+		transform: rotate(360deg) scale(1);
+	}
+}
+
+/* utility classes*/
+
+.u-border-top { border-top: solid rgba(0,0,0, .7) 1px; }
+.u-border-right { border-right: solid rgba(0,0,0, .7) 1px; }
+.u-border-bottom { border-bottom: solid rgba(0,0,0, .7) 1px; }
+.u-border-left { border-left: solid rgba(0,0,0, .7) 1px; }
+
+.u-margin-top-sm { margin-top: .5rem; }
+.u-margin-top-md { margin-top: 1.5rem; }
+.u-margin-top-lg { margin-top: 3rem; }
+
+.u-margin-bottom-sm { margin-bottom: .5rem; }
+.u-margin-bottom-md { margin-bottom: 1.5rem; }
+.u-margin-bottom-lg { margin-bottom: 3rem; }
