--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,21 @@
 .section-loader {
 	min-height:100vh;
 }
+
+.loading-screen {
+	height:100vh;
+	width:100%;
+	position:fixed;
+	top: 0;
+	left: 0;
+	z-index: 1000;
+	background-color:rgba(20,120,145, .8);
+}
+
+
+.loading-screen__content {
+	position:absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%, -50%);
+}	
